# c-kafka-examples

./: .gitignore  CMakeLists.txt  README.md
LibProject/include/: UppercaseTopology.h  consumer.h  producer.h  upper_case_topology.h
LibProject/src/: CMakeLists.txt  UpperCaseTopology.c  consumer.c  producer.c  upper_case_topology.c
LibProject/test/: CMakeLists.txt  example_test.cc
MainProject/src/: CMakeLists.txt  main.c
